- Fixed bug #61045 (fpm don't send error log to fastcgi clients)